UX: fix theme actions buttons position alignment

--- a/assets/stylesheets/theme-creator.scss
+++ b/assets/stylesheets/theme-creator.scss
@@ -171,6 +171,13 @@
       width: 650px;
       max-width: 100%;
     }
+
+    .theme-controls {
+      clear: left;
+      display: flex;
+      flex-wrap: wrap;
+      gap: 5px;
+    }
   }
 
   .status-message {
